# solo-bsc

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  bmp.gdb  build.rs  memory-nucleo.x  memory-solo.x  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
examples/: blinky.rs  ed25519.rs
src/: led.rs  lib.rs
