[package]
authors = ["Nicolas Stalder <nicolas@solokeys.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the Solo security key"
documentation = "https://docs.solokeys.io"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "GPL-3.0-or-later"
name = "solo-bsp"
repository = "https://github.com/solokeys/solo-bsp"
version = "0.0.2"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
# hex-literal = "0.1.1"
ssd1306 = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32l4xx-hal]
default-features = false
features = ["rt", "stm32l4x2"]
version = "0.3.5"

[dev-dependencies]
ssd1306 = "0.2.2"
nb = "0.1.1"
panic-halt = "0.2.0"

[dev-dependencies.ed25519-dalek]
path = "../ed25519-dalek"
default-features = false
features = ["u32_backend"]

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
