[package]
authors = ["Nicolas Stalder <nicolas@solokeys.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the Solo security key"
documentation = "https://docs.solokeys.io"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
exclude = ["/ref/*"]
license = "MIT OR Apache-2.0"
name = "solo-bsc"
repository = "https://github.com/solokeys/solo-bsc"
version = "0.0.3"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32l4xx-hal]
default-features = false
features = ["rt", "stm32l4x2"]
version = "0.3.6"

[dev-dependencies]
ssd1306 = "0.2.4"
nb = "0.1.1"
panic-halt = "0.2.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
