[package]
authors = ["Nicolas Stalder <nicolas@solokeys.com>"]
description = "renamed to solo-bsc"
license = "MIT OR Apache-2.0"
name = "solo-bsp"
repository = "https://github.com/solokeys/solo-bsp"
version = "0.0.3"
readme = "README.md"
edition = "2018"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
